# Crack-

./: .replit  LICENSE  README.md  main.py  pyproject.toml  server-code. -- py  server-code.py_
snippets/: Exceptions.py  Misc.py  auth.py  exists.py  force_types.py  user_perms.py  wrapper.py
src/: auth.py
src/pyauth/: __main__.py  auth.py  get_lines.py
