[tool.poetry]
name = "PyAuth"
version = "0.1.0"
description = ""
authors = ["bigminiboss"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
requests = "^2.28.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://github.com/replit/replit-py/blob/master/pyproject.toml
# replit -> pyauth
[tool.poetry.scripts]
pyauth = "pyauth.__main__:cli"
